# rust-playground

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  clippy.yml  rustfmt.yml  test.yml
crates/bin-crate/: Cargo.toml
crates/bin-crate/src/: main.rs
crates/lib-crate/: Cargo.toml
