[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["kohdice <kohdice.biz@gmail.com>"]
edition = "2024"
rust-version = "1.92"
license = "MIT"
description = "Rust Playground"
repository = "https://github.com/kohdice/rust-playground"

[workspace.dependencies]
lib-crate = { path = "crates/lib-crate" }
